--- a/MAGIC_ds.ipynb
+++ b/MAGIC_ds.ipynb
@@ -1166,7 +1166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1175,7 +1175,34 @@
         "id": "NtYNAEiy5ON3",
         "outputId": "281e65ca-def6-4e58-d4c7-f102fedc446f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3140 - accuracy: 0.8736\n",
+            "Updated: Nodes=16, Dropout=0, LR=0.01, Batch=32, Val Loss=0.3139735162258148\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3085 - accuracy: 0.8728\n",
+            "Updated: Nodes=16, Dropout=0, LR=0.01, Batch=64, Val Loss=0.30845317244529724\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3156 - accuracy: 0.8699\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3174 - accuracy: 0.8633\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3258 - accuracy: 0.8633\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3302 - accuracy: 0.8707\n",
+            "119/119 [==============================] - 0s 3ms/step - loss: 0.3217 - accuracy: 0.8636\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3207 - accuracy: 0.8646\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3352 - accuracy: 0.8741\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3497 - accuracy: 0.8704\n",
+            "119/119 [==============================] - 0s 1ms/step - loss: 0.3113 - accuracy: 0.8738\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3127 - accuracy: 0.8704\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3169 - accuracy: 0.8709\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3109 - accuracy: 0.8672\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3139 - accuracy: 0.8712\n",
+            "119/119 [==============================] - 0s 2ms/step - loss: 0.3083 - accuracy: 0.8733\n",
+            "Updated: Nodes=32, Dropout=0.2, LR=0.001, Batch=64, Val Loss=0.30829277634620667\n",
+            "Best hyperparameters: Nodes=32, Dropout=0.2, LR=0.001, Batch=64\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# least_val_loss = float('inf')\n",
@@ -1185,30 +1212,58 @@
         "#   for dropout_prob in[0, 0.2]:\n",
         "#     for lr in [0.01, 0.005, 0.001]:\n",
         "#       for batch_size in [32, 64, 128]:\n",
-        "#         print(f\"{num_nodes} nodes, dropout {dropout_prob}, lr {lr}, batch size {batch_size}\")\n",
+        "#         # print(f\"{num_nodes} nodes, dropout {dropout_prob}, lr {lr}, batch size {batch_size}\")\n",
         "#         model, history = train_model(x_train, y_train, num_nodes, dropout_prob, lr, batch_size, epochs)\n",
         "#         plot_history(history)\n",
         "#         val_loss = model.evaluate(x_valid, y_valid)[0]\n",
         "#         if val_loss < least_val_loss:\n",
         "#           least_val_loss = val_loss\n",
-        "#           least_loss_model = model"
+        "#           least_loss_model = model\n",
+        "\n",
+        "least_val_loss = float('inf')\n",
+        "least_loss_model = None\n",
+        "epochs = 50  # Reduced number of epochs for faster testing\n",
+        "\n",
+        "# Reduced search space\n",
+        "for num_nodes in [16, 32]:\n",
+        "    for dropout_prob in [0, 0.2]:\n",
+        "        for lr in [0.01, 0.001]:\n",
+        "            for batch_size in [32, 64]:\n",
+        "                model, history = train_model(x_train, y_train, num_nodes, dropout_prob, lr, batch_size, epochs)\n",
+        "                val_loss = model.evaluate(x_valid, y_valid)[0]\n",
+        "                if val_loss < least_val_loss:\n",
+        "                    least_val_loss = val_loss\n",
+        "                    least_loss_model = model\n",
+        "                    print(f\"Updated: Nodes={num_nodes}, Dropout={dropout_prob}, LR={lr}, Batch={batch_size}, Val Loss={val_loss}\")\n",
+        "\n",
+        "# Final best hyperparameters\n",
+        "print(f\"Best hyperparameters: Nodes={least_loss_model.layers[0].output_shape[1]}, \"\n",
+        "      f\"Dropout={least_loss_model.layers[1].rate}, LR={lr}, Batch={batch_size}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 70,
       "metadata": {
         "id": "h7RWodjM5SC7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "119/119 [==============================] - 0s 1ms/step\n"
+          ]
+        }
+      ],
       "source": [
-        "# y_pred = least_loss_model.predict(x_test)\n",
-        "# y_pred = (y_pred > 0.5).astype(int).reshape(-1,)"
+        "y_pred = least_loss_model.predict(x_test)\n",
+        "y_pred = (y_pred > 0.5).astype(int).reshape(-1,)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1223,12 +1278,12 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.79      0.81      0.80      1297\n",
-            "           1       0.90      0.89      0.90      2507\n",
+            "           0       0.87      0.73      0.79      1297\n",
+            "           1       0.87      0.94      0.91      2507\n",
             "\n",
-            "    accuracy                           0.86      3804\n",
-            "   macro avg       0.85      0.85      0.85      3804\n",
-            "weighted avg       0.86      0.86      0.86      3804\n",
+            "    accuracy                           0.87      3804\n",
+            "   macro avg       0.87      0.84      0.85      3804\n",
+            "weighted avg       0.87      0.87      0.87      3804\n",
             "\n"
           ]
         }
